# web_hw7

hw7/: alembic.ini  pyproject.toml
hw7/alembic/versions/: 3f7dd75a33a4_init.py  8a53f9aaa06e_init.py  9c6c0fb65571_init.py  f92e6ec328c4_init.py
hw7/hw7/: models.py  my_select.py  seed.py
